--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.5",
+    "npm": "^6.1.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
